<resources>
    <string name="app_name">Libr</string>
    <string name="book_list_title">My Books</string>
    <string name="add_book_fab_description">Add book</string>
    <string name="author_prefix">written by</string>
    <string name="pages_prefix">Page:</string>
    <string name="update_button_text">Update</string>
    <string name="delete_button_text">Delete</string>
    <string name="add_button_text">Add</string>
    <string name="update_book_title">Update Book</string>
    <string name="add_book_title">Add Book</string>
    <string name="dialog_question">Are you sure you want to delete this book?</string>
    <string name="cancel_button_text">Cancel</string>
</resources>