<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BookDetailFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/book_cover_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/book_cover"
            android:layout_width="170dp"
            android:layout_height="250dp"
            android:src="@drawable/martian" />

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/book_cover_card_view"
        app:layout_constraintStart_toEndOf="@+id/book_cover_card_view"
        app:layout_constraintTop_toTopOf="@+id/book_cover_card_view">

        <TextView
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/libre_baskerville_bold"
            android:text="Book title"
            android:textColor="@android:color/black"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/author_prefix"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/book_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_light"
            android:text="@string/pages_prefix"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_cover_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/book_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="Description"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat purus nunc, ac interdum leo imperdiet ac. Mauris congue consequat arcu, ut malesuada quam auctor nec. Nulla facilisi. Donec velit sapien, tempor et porta commodo, imperdiet quis nisl. Maecenas lobortis arcu enim, et finibus justo consectetur eu."
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_genres_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="Genres"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="Action, Drama, Science Fiction"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:cardCornerRadius="10dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="5dp">
                    <Button
                        android:id="@+id/delete_book_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_red_dark"
                        android:text="@string/delete_button_text"
                        android:textColor="@android:color/white"
                        android:clickable="true"
                        android:focusable="true"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:cardCornerRadius="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1">
                        <Button
                            android:id="@+id/update_book_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/holo_blue_dark"
                            android:text="@string/update_button_text"
                            android:textColor="@android:color/white"
                            android:clickable="true"
                            android:focusable="true"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
